syntax = "proto2";

package LogicSimulator;

option java_multiple_files = true;
option java_package = "com.github.industrialcraft.logicsimulatormp.common.proto.generated";

message UpdateLogicGateMessage{
  required int64 id = 1;
  required int32 type = 2;
  required int32 numInputs = 3;
  required int32 numOutputs = 4;
  required int64 posX = 5;
  required int64 posY = 6;
}
message RemoveLogicGateMessage{
  required int64 gateID = 1;
}
message UpdateWireMessage{
  required int64 wireID = 1;
  required int64 idA = 2;
  required int32 pinA = 3;
  required bool outputA = 4;
  required int64 idB = 5;
  required int32 pinB = 6;
  required bool outputB = 7;
}
message RemoveWireMessage{
  required int64 wireID = 1;
}
message WireStateMessage{
  required int64 wireID = 1;
  required bool state = 2;
}